# exercism

./: .codeclimate.yml  .exercism.json  .gitignore  .rubocop.yml  .travis.yml  Gemfile  LICENSE  LICENSE.md  README.md  Rakefile
rust/: .gitignore  Cargo.toml  Justfile
rust/acronym/: README.md
rust/acronym/.exercism/: metadata.json
rust/acronym/src/: lib.rs
rust/acronym/tests/: acronym.rs
rust/all-your-base/: README.md
rust/all-your-base/.exercism/: metadata.json
rust/all-your-base/src/: lib.rs
rust/all-your-base/tests/: all-your-base.rs
rust/allergies/: README.md
rust/allergies/.exercism/: metadata.json
rust/allergies/src/: lib.rs
rust/allergies/tests/: allergies.rs
rust/anagram/.exercism/: metadata.json
rust/anagram/src/: lib.rs
rust/anagram/tests/: anagram.rs
rust/armstrong-numbers/.exercism/: metadata.json
rust/armstrong-numbers/src/: lib.rs
rust/armstrong-numbers/tests/: armstrong-numbers.rs
rust/assembly-line/: README.md
rust/assembly-line/.exercism/: metadata.json
rust/assembly-line/src/: lib.rs
rust/binary-search/: HINTS.md  README.md
rust/bob/: README.md
rust/bowling/: README.md
rust/clock/: README.md
rust/collatz-conjecture/: README.md
rust/diffie-hellman/: Cargo.toml  README.md
rust/eliuds-eggs/: README.md
rust/gigasecond/: README.md
rust/grade-school/: README.md
rust/health-statistics/: HINTS.md  README.md
rust/hello-world/: README.md
rust/high-scores/: README.md
rust/isbn-verifier/: README.md
rust/isogram/: README.md
rust/kindergarten-garden/: README.md
rust/leap/: README.md
rust/low-power-embedded-game/: HINTS.md  README.md
rust/luhn/: Cargo.toml
rust/magazine-cutout/: HINTS.md  README.md
rust/minesweeper/: README.md
rust/nth-prime/: README.md
rust/nucleotide-count/: README.md
rust/paasio/: README.md
rust/palindrome-products/: README.md
rust/pangram/: README.md
rust/pascals-triangle/: README.md
rust/perfect-numbers/: README.md
rust/prime-factors/: README.md
rust/proverb/: README.md
rust/resistor-color/: HINTS.md  README.md
rust/reverse-string/: Cargo.toml
rust/rna-transcription/: HELP.md  README.md
rust/role-playing-game/: HINTS.md  README.md
rust/rpn-calculator/: HINTS.md  README.md
rust/series/: HELP.md  README.md
rust/short-fibonacci/: HINTS.md  README.md
rust/sum-of-multiples/: README.md
rust/tournament/: README.md
(+1477 files in other folders)
