[workspace]

members = [
  "acronym",
  "allergies",
  "anagram",
  "armstrong-numbers",
  "assembly-line",
  "beer-song",
  "bob",
  "clock",
  "difference-of-squares",
  "gigasecond",
  "grains",
  "health-statistics",
  "hello-world",
  "high-scores",
  "leap",
  "low-power-embedded-game",
  "lucians-luscious-lasagna",
  "luhn",
  "magazine-cutout",
  "matching-brackets",
  "minesweeper",
  "nth-prime",
  "palindrome-products",
  "prime-factors",
  "proverb",
  "raindrops",
  "resistor-color",
  "reverse-string",
  "rna-transcription",
  "role-playing-game",
  "rpn-calculator",
  "semi-structured-logs",
  "short-fibonacci",
  "space-age",
  "sublist",
  "sum-of-multiples",
  "tournament",
]
