[workspace]
resolver = "2"

members = [
  "acronym",
  "allergies",
  "all-your-base",
  "anagram",
  "armstrong-numbers",
  "assembly-line",
  "beer-song",
  "bob",
  "clock",
  "collatz-conjecture",
  "diffie-hellman",
  "difference-of-squares",
  "eliuds-eggs",
  "gigasecond",
  "grade-school",
  "grains",
  "hamming",
  "health-statistics",
  "hello-world",
  "high-scores",
  "isbn-verifier",
  "kindergarten-garden",
  "leap",
  "low-power-embedded-game",
  "lucians-luscious-lasagna",
  "luhn",
  "magazine-cutout",
  "matching-brackets",
  "minesweeper",
  "nth-prime",
  "pangram",
  "palindrome-products",
  "prime-factors",
  "proverb",
  "raindrops",
  "reverse-string",
  "rna-transcription",
  "role-playing-game",
  "rpn-calculator",
  "semi-structured-logs",
  "series",
  "short-fibonacci",
  "space-age",
  "sublist",
  "sum-of-multiples",
  "tournament",
]
